# cg

./: File.ydsl  cg.cabal  stack.yaml
Handler/: DB.hs  Utils.hs
Handler/DB/: Internal.hs  RouteFiles.hs  RouteFilesFile.hs  RouteUsergroups.hs  RouteUsers.hs  Routes.hs  Validation.hs
backend/: Application.hs  Company.ydsl  Foundation.hs  HasDateRange.ydsl  Model.hs  Settings.hs  UserGroup.ydsl  cg.cabal  cg.ydsl  run.sh  yesod-dsl.sh
backend/DB/: Board.hs  Ownership.hs  Shares.hs
backend/Handler/: Home.hs  Register.hs  ResetPassword.hs  UploadFiles.hs
backend/Handler/DB/: Enums.hs  Internal.hs  RouteUsergroupcontents.hs  RouteUsergroupitems.hs  RouteUsergroups.hs  RouteUsergroupsUserGroup.hs  RouteUsers.hs  Validation.hs
backend/Xlsx/: Convert.hs  Test.hs  Types.hs
backend/app/: devel.hs  main.hs
backend/config/: client_session_key.aes  keter.yml  routes  settings.yml  test-settings.yml
backend/messages/: en.msg
config/: settings.yml
data/: ACG1V-HE.xlsx  AFAGR-HE.xlsx  Matrix.xlsx  aAll firmsFinland.xlsx  aaTemplate-empty.xlsx  ownership.xlsx
temp/: db.dot  update.sh
